<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/inscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout

            android:id="@+id/inscription_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2dp">


            <TextView
                android:id="@+id/inscription_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="25dp"
                android:layout_centerInParent="true"
                android:textColor="#cbbba0"
                android:text="@string/inscription" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/inscription_form"
            android:layout_width="300dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inscription_name_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/inscription_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_inscription_name"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:theme="@style/EditTextLightThemeInscription"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inscription_surname_box"
                android:layout_below="@+id/inscription_name_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/inscription_surname_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_inscription_surname"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:theme="@style/EditTextLightThemeInscription"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inscription_email_box"
                android:layout_below="@+id/inscription_surname_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/inscription_email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_login_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorPrimary"
                    android:theme="@style/EditTextLightThemeInscription"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inscription_tel_box"
                android:layout_below="@+id/inscription_email_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/inscription_tel_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_tel_email"
                    android:inputType="text|phone"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorPrimary"
                    android:theme="@style/EditTextLightThemeInscription"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inscription_adresse_box"
                android:layout_below="@+id/inscription_tel_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/inscription_adresse_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_code_postale"
                    android:inputType="text|phone"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorPrimary"
                    android:theme="@style/EditTextLightThemeInscription"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_ins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inscription_adresse_box"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/login_password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_login_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:theme="@style/EditTextLightThemeInscription"/>

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="200dp"

                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@+id/password_ins">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="@color/blue"
                    android:text="@string/action_next"/>
            </RelativeLayout>


        </RelativeLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>